; ModuleID = '/home/carl/AnghaBench/lede/package/lean/shortcut-fe/src/extr_fast-classifier.c_fast_classifier_update_mark.c'
source_filename = "/home/carl/AnghaBench/lede/package/lean/shortcut-fe/src/extr_fast-classifier.c_fast_classifier_update_mark.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sfe_connection_mark = type { i32, i32, i32, i32, i32, i32 }
%struct.sfe_connection = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@sfe_connections_lock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sfe_connection_mark*, i32)* @fast_classifier_update_mark to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fast_classifier_update_mark(%struct.sfe_connection_mark* %0, i32 %1) #0 {
  %3 = alloca %struct.sfe_connection_mark*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.sfe_connection*, align 8
  store %struct.sfe_connection_mark* %0, %struct.sfe_connection_mark** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32 @spin_lock_bh(i32* @sfe_connections_lock)
  %7 = load %struct.sfe_connection_mark*, %struct.sfe_connection_mark** %3, align 8
  %8 = getelementptr inbounds %struct.sfe_connection_mark, %struct.sfe_connection_mark* %7, i32 0, i32 5
  %9 = load %struct.sfe_connection_mark*, %struct.sfe_connection_mark** %3, align 8
  %10 = getelementptr inbounds %struct.sfe_connection_mark, %struct.sfe_connection_mark* %9, i32 0, i32 4
  %11 = load %struct.sfe_connection_mark*, %struct.sfe_connection_mark** %3, align 8
  %12 = getelementptr inbounds %struct.sfe_connection_mark, %struct.sfe_connection_mark* %11, i32 0, i32 3
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.sfe_connection_mark*, %struct.sfe_connection_mark** %3, align 8
  %15 = getelementptr inbounds %struct.sfe_connection_mark, %struct.sfe_connection_mark* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.sfe_connection_mark*, %struct.sfe_connection_mark** %3, align 8
  %18 = getelementptr inbounds %struct.sfe_connection_mark, %struct.sfe_connection_mark* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %4, align 4
  %21 = call %struct.sfe_connection* @fast_classifier_find_conn(i32* %8, i32* %10, i32 %13, i32 %16, i32 %19, i32 %20)
  store %struct.sfe_connection* %21, %struct.sfe_connection** %5, align 8
  %22 = load %struct.sfe_connection*, %struct.sfe_connection** %5, align 8
  %23 = icmp ne %struct.sfe_connection* %22, null
  br i1 %23, label %24, label %32

24:                                               ; preds = %2
  %25 = load %struct.sfe_connection_mark*, %struct.sfe_connection_mark** %3, align 8
  %26 = getelementptr inbounds %struct.sfe_connection_mark, %struct.sfe_connection_mark* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.sfe_connection*, %struct.sfe_connection** %5, align 8
  %29 = getelementptr inbounds %struct.sfe_connection, %struct.sfe_connection* %28, i32 0, i32 0
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  store i32 %27, i32* %31, align 4
  br label %32

32:                                               ; preds = %24, %2
  %33 = call i32 @spin_unlock_bh(i32* @sfe_connections_lock)
  ret void
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local %struct.sfe_connection* @fast_classifier_find_conn(i32*, i32*, i32, i32, i32, i32) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
